--- a/tools/unicodetools/com/ibm/text/UCD/StandardizedVariants-Template.html
+++ b/tools/unicodetools/com/ibm/text/UCD/StandardizedVariants-Template.html
@@ -19,7 +19,7 @@
 
 <table class="header">
   <tr>
-    <td class="icon"><a href="http://www.unicode.org"><img align="middle" alt="[Unicode]" border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="UnicodeCharacterDatabase.html">Unicode 
+    <td class="icon"><a href="http://www.unicode.org"><img align="middle" alt="[Unicode]" border="0" src="http://www.unicode.org/webscripts/logo60s2.gif" width="34" height="33"></a>&nbsp;&nbsp;<a class="bar" href="http://www.unicode.org/ucd">Unicode 
       Character Database</a></td>
   </tr>
   <tr>
